fix: update action description display to limit text overflow for better readability

--- a/frontend/src/app/incident-response/shared/component/action-builder/action-builder.component.scss
+++ b/frontend/src/app/incident-response/shared/component/action-builder/action-builder.component.scss
@@ -4,8 +4,6 @@
   transition: background-color 0.2s ease;
   justify-content: center;
   min-height: 210px;
-  max-height: 500px;
-  overflow: auto;
 }
 
 .action-block {
